--- a/sanpham.html
+++ b/sanpham.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .ds{
+      animation: bounce 2s infinite alternate ease-in-out; /* Áp dụng animation với tên là "bounce" và sử dụng ease-in-out để làm mượt mà hơn */
+      transition: transform 0.3s; /* Thêm transition cho hiệu ứng nhảy */
+        }
+      /* Định nghĩa keyframes cho animation */
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0); /* Tại điểm đầu và cuối, không thay đổi vị trí theo trục y */
+      }
+      50% {
+        transform: translateY(-5px); /* Tại giữa thời gian, nhảy lên 10px */
+      }
+    }
+    
+    </style>
 </head>
 
 <body>
@@ -443,9 +459,9 @@
 
             Hotline: + 84972220532 - + 84972220456 <br> <br>
 
-            Email: email@theordinarystore.com <br><br>
+            Email: cuahangsushikokoro@gmai.com <br><br>
 
-            Website: http://theordinarystore.com
+            Website: http://cuahangsushikokoro@gmai.com
 
 
 
