--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
         <div class=" m-0 p-0 tong1">
             <div class="phu22">
                 <div class="trai">
-                    <video autoplay loop src="/img/pexels-ivan-samkov-8908443 (1080p).mp4"></video>
+                    <!-- <video autoplay loop src="img/pexels-ivan-samkov-8908443 (1080p).mp4"></video> -->
+                    <video autoplay loop>
+                        <source src="/Duanmau-FPT/img/pexels-ivan-samkov-8908443 (1080p).mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                      </video>
                 </div>
                 <div class="phai">
                     <h1>Hãy đến <strong>KOKORO</strong> của chúng tôi.</h1>
@@ -118,7 +122,12 @@
 
         </div>
         <div class="chuu">
-            <div class="thongtin"><video autoplay loop src="/img/video (2160p).mp4"></video></div>
+            
+            <div class="thongtin">
+                <video autoplay loop>
+                    <source src="/Duanmau-FPT/img/video (2160p).mp4" type="video/mp4">
+                  </video>
+            </div>
             <div class="tt">
                 <p>"Chúng tôi xin chân thành gửi lời cảm ơn sâu sắc nhất đến bạn vì đã ủng hộ và tin tưởng sử dụng dịch
                     vụ của chúng tôi trong suốt thời gian qua.
