--- a/sanpham.html
+++ b/sanpham.html
@@ -37,7 +37,8 @@
             </ul>
         </div>
         <div class="banner">
-            <img src="img/ssbn.jpg" alt="">
+            <!-- <img src="img/ssbn.jpg" alt=""> -->
+            <video autoplay loop src="img/pexels-rodnae-productions-6645788 (Original).mp4"></video>
 
         </div>
         <div class="ds">
@@ -79,7 +80,7 @@
                 <img src="img/sashimia.jpg" alt=""><br>
               Sashimi bạch tuộc  <br>
              120.000đ/Phần <br>
-                <span>180.000đ</span> <br>
+                <p>180.000đ</p> 
                 <button>Mua Ngay</button>
             </div>
             <div class="phu2">
@@ -375,7 +376,8 @@
             <div class="phu2">
                 <img src="img/setd.png" alt=""><br>
                 Combo sushi cỡ lớn <br>
-                120.000đ/Phần<br>
+                120.000đ/Phần<br>  
+                <!-- phần này bỏ trong div chia div ra xong cho div này max-width:100px cho nó bóp lại-->
                 <p>180.000đ</p><br>
                 <button>Mua Ngay</button>
             </div>
@@ -383,8 +385,8 @@
         <div class="tong2">
             <div class="phu2">
                 <img src="img/setaa.png" alt=""><br>
-                Salad + nước sốt mè rang<br>
-                120.000đ/Phần <br>
+               <span> Salad + nước sốt mè rang<br>
+                120.000đ/Phần <br></span>
                 <p>180.000đ</p>
                 <button>Mua Ngay</button>
             </div>
