--- a/sanphamct.html
+++ b/sanphamct.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="spct">
-            <h1>Salad thịt giăm bông sống</h1>
+            <h1>SALAD THỊT DĂM BÔNG SỐNG</h1>
             <img src="/Duanmau-FPT/img/combo.png" alt=""> <br>
             <span>Giá:100.000Đ</span> <br>
             <strong>Mô tả</strong> <br>
