--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -16,8 +16,8 @@
         .thanhtoan h1 {
             margin-bottom: 3%;
             text-align: center;
-            color: rgb(241, 108, 108);
-        }
+            color: rgb(255, 254, 254);
+  text-shadow: 2px 2px 2px #c92727;        }
 
 
         .tongtt tr td {
